[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["odai1990 <odai22odai78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.16"
pandas = "^1.2.5"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
